hello/hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: my-nginx
  type: LoadBalancer
  ports:
    - name: my-nginx-port
      port: 80
      targetPort: 80
